# invoicer

./: Cargo.toml  README.md  rustfmt.toml
src/: accounting.rs  address.rs  ares.rs  entity.rs  invoice.rs  lib.rs  main.rs  payment_method.rs  pdf.rs  registration_number.rs  time.rs
src/entity/: eu.rs  mod.rs  us.rs
templates/: style.css
