[package]
name = "invoicer"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["blocking"]}
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
simple_pdf_generator = "0.3.0"
simple_pdf_generator_derive = "0.2.1"
spayd = "0.2.1"
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"
iban_validate = { version = "4.0.1", features = ["serde"] }
iso_currency = { version = "0.4.4", features = ["with-serde"] }
anyhow = "1.0.86"
tokio = { version = "1.38", features = ["rt"] }
printpdf = "0.7.0"
azul-text-layout = "0.0.4"
date = "0.1.3"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
