[package]
name = "invoicer"
version = "0.1.0"
edition = "2021"
description = "Crate for generating cz/sk invoices"
keywords = ["invoice", "czech", "ares"]
license = "MIT"
homepage = "https://github.com/Bleksak/invoicer"
repository = "https://github.com/Bleksak/invoicer"
readme = "README.md"


[dependencies]
reqwest = { version = "0.12.4", features = ["blocking"]}
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
simple_pdf_generator = "0.3.0"
simple_pdf_generator_derive = "0.2.1"
spayd = "0.2.1"
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"
iban_validate = { version = "4.0.1", features = ["serde"] }
iso_currency = { version = "0.4.4", features = ["with-serde"] }
anyhow = "1.0.86"
printpdf = {version = "0.7.0", features = ["svg", "embedded_images"]}
azul-text-layout = "0.0.4"
date = "0.1.3"
chrono = { version = "0.4.38", features = ["serde"] }
accounting = { version = "0.2.0", features = ["decimal"] }
fast_qr = { version = "0.12.5", features = ["image"] }
