[package]
name = "invoicero"
version = "1.0.4"
edition = "2021"
description = "Crate for generating cz/sk invoices"
keywords = ["invoice", "czech", "ares", "finance"]
license = "MIT"
homepage = "https://github.com/Bleksak/invoicer"
repository = "https://github.com/Bleksak/invoicer"
readme = "README.md"


[dependencies]
reqwest = { version = "0.12.4", features = ["blocking"]}
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
spayd = "0.2.1"
rust_decimal = "1.35.0"
iban_validate = { version = "4.0.1", features = ["serde"] }
iso_currency = { version = "0.4.4", features = ["with-serde"] }
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
accounting = { version = "0.2.0", features = ["decimal"] }
fast_qr = { version = "0.12.5", features = ["image"] }
maud = "0.26.0"
